#63 Fixing jumping issue.
#63 Fixing jumping issue.

--- a/assets/css/quads-admin.css
+++ b/assets/css/quads-admin.css
@@ -108,6 +108,7 @@ input.medium-text, textarea.medium-text {
 
 #quads_tab_container ul {
     /*height: 200px;*/
+    max-width: 680px;
     list-style: none;
     width: 681px; 
     margin: 0;
@@ -181,6 +182,7 @@ li.quads-tabs {
     text-align:left;
     margin-bottom:10px;
     max-width: 640px;
+    width: 640px;
     float: left;
     clear:both;
 }
